--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,24 @@ body {
 .aboutme {
   width: 75%;
   height: auto;
-  padding: 10px;
+  padding: 15px;
   border-width: 20px;
   background-color: #C9F0FF;
   margin-left: auto;
   margin-right: auto;
   box-align: center;
+  word-wrap: break-word;
+
 }
 
 .aboutme p {
   font-family: sans-serif;
+  float: right;
+  margin: auto;
+  margin-right: 30px;
+  height: auto;
+  max-width: 70%;
+
 }
 
 .aboutme h2 {
